--- a/web/index.html
+++ b/web/index.html
@@ -16,12 +16,12 @@
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
-  <meta name="description" content="Qallr is a simple and easy way to share your contact information with others.">
+  <meta name="description" content="QallR is a simple and easy way to share your contact information with others.">
 
   <!-- iOS meta tags & icons -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
-  <meta name="apple-mobile-web-app-title" content="callr">
+  <meta name="apple-mobile-web-app-title" content="QallR">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
 
   <!-- Favicon -->
